--- a/README.Rmd
+++ b/README.Rmd
@@ -8,7 +8,7 @@ output:
 
 
 ***
-**hybriddetective** is an R package designed to work in concert with the packages **parallelnewhybrid** and **genepopedit** to streamline, and where possible automate, the detection of hybrids by moving the entire process into the R environment.
+###***hybriddetective*** is an R package designed to streamline, and where possible automate, the detection of hybrids by moving the entire process into the R environment.
 
 
 ### Preamble  
@@ -77,7 +77,7 @@ This fuction will extract data from *NewHybrids* runs and evaluate the correct a
 
 <h4 class="text-primary">hybridpowercomp</h4>
 This function will replicate the analysis of *hybridpower* but will paritition the results according to the number of loci used in the assignment analysis. The plots will compare assignment power among differnet numbers of loci used.  
-<span style = "color:red"> <strong>NOTE:</strong></span> *hybridpowercomp* assumes all simulations and associated replicates are produced from *NewHybrids* analyses conducted on the same number of loci. Use *hybridpowercomp* if the number of loci varies among simulations.
+<span style = "color:red"> <strong>NOTE:</strong></span> *hybridpower* assumes that the same simulated datasets are being tested, with varying numbers of loci in the panel. *hybridpowercomp* should be used if the number of loci do not vary among simulations.
 
 
 
